# openwebui-chat-client

./: DELETE_CHAT_TESTS_SUMMARY.md  pyproject.toml  run_tests.sh
openwebui_chat_client/: openwebui_chat_client.py
openwebui_chat_client/modules/: async_chat_manager.py  chat_manager.py
tests/: test_delete_chat_functionality.py
tests/modules/: test_async_chat_manager_delete.py  test_chat_manager_delete.py
