[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "openwebui-chat-client"
version = "0.1.24"
authors = [
    { name="fujie", email="fj1945@live.cn" },
]
description = "A powerful and intelligent Python client for the Open WebUI API."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-only" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests",
    "python-dotenv",
    "httpx"
]

[project.optional-dependencies]
test = [
    "responses",
    "pytest",
    "pytest-cov",
    "pytest-asyncio>=0.21.0"
]
dev = [
    "black",
    "isort",
    "ruff",
    "mypy",
    "types-requests",
    "bandit",
    "pip-audit"
]

[project.urls]
Homepage = "https://github.com/Fu-Jie/openwebui-chat-client"
"Bug Tracker" = "https://github.com/Fu-Jie/openwebui-chat-client/issues"
"Documentation" = "https://github.com/Fu-Jie/openwebui-chat-client#readme"

[tool.setuptools.packages.find]
include = ["openwebui_chat_client*"]


# Code quality tool configurations
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["openwebui_chat_client"]
skip = [".git", ".venv", "build", "dist"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
no_implicit_optional = false
exclude = [
    "build",
    "dist",
    ".venv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["openwebui_chat_client"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/private_*.py",
]

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101"]  # assert_used
